# TCE-GO-AI-Framework

./: .gitignore  README.md  setup.cfg
.github/workflows/: codeql-analysis.yml  publish-pypi.yml  publish-testpypi.yml
src/: BERT + RF Corretude.ipynb  BERT+RF.ipynb  BERT+SVM.ipynb  BERT+SVM.py  BERT-ClassificarAcerto.ipynb  BERT.ipynb  REG_RF.ipynb  SVR.ipynb  SVR.py
src/preprocessing/: classification.py  dataprep.py  text.py
src/tceframework/: __main__.py  cli.py  config.py  dremio.py  io.py
src/tceframework/data/: filter.py  misc.py  text.py
src/tceframework/data/inference/: utils.py
src/tceframework/data/preprocessing/: classification.py  encoders.py
src/tceframework/flows/: __svmtraining.py  __training.py  inference.py  training.py
src/tceframework/model/: bert.py  metrics.py
src/tceframework/preprocessing/: classification.py  encoders.py
src/tceframework/scripts/: inference.py  svmtraining.py  training.py
src/tcegoframework/: __main__.py  cfgparsing.py  cli.py  config.py  dremio.py  io.py  tcehdfs.py
src/tcegoframework/data/: filter.py  misc.py
src/tcegoframework/data/inference/: utils.py
src/tcegoframework/flows/: __svmtraining.py  __training.py  evaluation.py  extraction.py  inference.py  training.py
src/tcegoframework/model/: bert.py  metrics.py
src/tcegoframework/preprocessing/: anomalydetection.py  classification.py  encoders.py  text.py  transform.py
