[metadata]
name = tcegoframework
version = 0.5.0
author = Kinteshi
author_email = kinteshi@outlook.com
description = TCE-GO Artificial Intelligence Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kinteshi/TCE-GO-AI-Framework
project_urls =
    Bug Tracker = https://github.com/Kinteshi/TCE-GO-AI-Framework/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    dill
    numpy
    pandas
    seaborn
    matplotlib
    clean-text
    unidecode
    torch
    tensorflow
    transformers
    scipy
    sklearn
    nltk
    openpyxl
    jaydebeapi
    pexpect
    hdfs3


[options.packages.find]
where = src

[options.package_data]
* = *.jar

[options.entry_points]
console_scripts =
    tcegoaif = tcegoframework.cli:main